--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,10 +18,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install V8 engine on Linux
-        if: runner.os == 'Linux'
-        run: sudo apt-get install libv8-dev
-
       - name: Install Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
@@ -37,7 +33,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev
+          sudo apt-get install libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libv8-dev
 
 
       - name: Restore packages
